final commit maybe :(

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -33,17 +33,15 @@
                 </ul>
             </div>
 
-            <div class=lhs-items>
-                <h2>Technologies</h2> <hr>
+            <div class="lhs-items">
+                <h2>Hobbies</h2> <hr>
                 <ul>
-                    <li><span class="material-symbols-outlined icons">arrow_right_alt</span>C, C++, Java</li>
-                    <li><span class="material-symbols-outlined icons">arrow_right_alt</span>HTML, CSS, JavaScript</li>
-                    <li><span class="material-symbols-outlined icons">arrow_right_alt</span>Github</li>
-                    <li><span class="material-symbols-outlined icons">arrow_right_alt</span>Linux</li>
+                    <li><span class="material-symbols-outlined icons">arrow_right_alt</span>Watching Movies</li>
+                    <li><span class="material-symbols-outlined icons">arrow_right_alt</span>Playing Games</li>
                 </ul>
             </div>
 
-            <div class=lhs-items>
+            <div class="lhs-items">
                 <h2>Languages Known</h2> <hr>
                 <ul>
                     <li><span class="material-symbols-outlined icons">arrow_right_alt</span>Hindi/Urdu</li>
@@ -55,14 +53,14 @@
 
 
         <div id="rhs">
-            <div class="rhs-items">
+            <div class="intro">
                 <h1>Shaik Mohammed Asif</h1>
                 <h4>Computer Science Undergraduate</h4>
                 <p id="about">A computer science undergrad with areas of interest such as web development, cybersecurity or just anything in tech which will help me to get a job. <br> Seeking a position in a company that can launch my career and help me to build a stronger skill set.</p>
                 <hr>
             </div>
 
-            <div class="edu">
+            <div id="edu">
                 <h2>Education</h2>
                 <div id="edu-grid">
                     <p><strong>2020 - 2023</strong></p>
@@ -80,7 +78,7 @@
                 </div>
             <!-- end of edu div -->
             </div>
-
+            
             <div id="certifications">
                 <h2>Certifications & Courses</h2>
                 <div id="cert-grid">
@@ -92,9 +90,28 @@
                 </div>
 
             </div>
+
+            <div id="tech-skills">
+                <h2>Technical Skills</h2>
+                <ul>
+                    <li><span class="material-symbols-outlined icons">arrow_right_alt</span>C, C++, Java</li>
+                    <li><span class="material-symbols-outlined icons">arrow_right_alt</span>HTML, CSS, JavaScript</li>
+                    <li><span class="material-symbols-outlined icons">arrow_right_alt</span>Github</li>
+                    <li><span class="material-symbols-outlined icons">arrow_right_alt</span>Linux</li>
+                </ul>
+            </div>
+
+            <div id="social-profiles">
+                <h2>Social Profiles</h2>
+                <ul>
+                    <li><a href="https://linktr.ee/oddasif">Click Here!</a></li>
+                </ul>
+            </div>
+
+        <!-- end of rhs -->
         </div>
 
-    <!-- end of main     -->
+    <!-- end of main -->
     </div>
 </body>
 </html>
