--- a/asif-resume/resume.html
+++ b/asif-resume/resume.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="/resume/resume.css">
-    <link rel="shortcut icon" href="/resume/doc-icon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="resume.css">
+    <link rel="shortcut icon" href="doc-icon.svg" type="image/x-icon">
     <title>Resume</title>
 </head>
 
@@ -14,7 +14,7 @@
     <div id="main">
 
         <div id="lhs">
-            <img src="/resume/profile-pic.jpg" alt="profile-pic">
+            <img src="profile-pic.jpg" alt="profile-pic">
             <div class="lhs-items">
                 <h2>Contact</h2> <hr>
                 <ul>
